feat(playwright): add local playwright-mcp tool with improved tool discovery
- Add tools/playwright/ wrapping Microsoft's @playwright/mcp npm package
- Build to ghcr.io instead of depending on mcr.microsoft.com (fixes DNS issues)
- Add routing hints and see_also cross-references for better tool selection
- Update curl with warnings to suggest playwright for JS pages/login forms
- Fix browser_type params (add ref, element) and browser_fill_form type enum
- Add missing browser_drag and browser_install methods to registry

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -106,6 +106,8 @@ jobs:
               - 'tools/scapy/**'
             strongswan:
               - 'tools/strongswan/**'
+            playwright:
+              - 'tools/playwright/**'
 
       - name: Filter out mcp-common from tools list
         id: filter-tools
@@ -197,7 +199,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, playwright, privesc, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, strongswan, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
