--- a/registry.yaml
+++ b/registry.yaml
@@ -3035,6 +3035,23 @@ tools:
       memory_mb: 256
       cpu: 0.5
 
+    # Routing hints for tool selection (added for Doc 22 Phase 1)
+    routing:
+      use_for:
+        - "find exploit for CVE"
+        - "search exploitdb"
+        - "known vulnerability exploit"
+        - "public exploit"
+        - "exploit database search"
+      triggers:
+        - "CVE-\\d{4}-\\d+"
+        - "exploit.*search"
+        - "searchsploit"
+      never_use_for:
+        - task: "writing custom exploits"
+          use_instead: "payload"
+          reason: "searchsploit finds existing exploits, use payload tool to create new ones"
+
     methods:
       search:
         description: "Search ExploitDB for exploits matching a query"
@@ -8053,3 +8070,98 @@ tools:
           response:
             type: string
             description: "SNMP response data"
+
+  # =============================================================================
+  # INTERNAL / INFRASTRUCTURE
+  # =============================================================================
+
+  embedding:
+    name: embedding
+    version: "1.0"
+    description: "BGE-M3 embedding model for semantic search. Internal tool for tool discovery and experience matching."
+    image: "ghcr.io/silicon-works/mcp-tools-embedding:latest"
+    image_size_mb: 2500
+    internal: true  # Not for direct agent use
+
+    capabilities:
+      - text_embedding
+      - semantic_search
+      - hybrid_scoring
+
+    routing:
+      use_for:
+        - "generate embeddings"
+        - "semantic similarity"
+        - "vector search"
+      never_use_for:
+        - task: "any pentest task"
+          reason: "internal infrastructure tool, not for direct use"
+
+    methods:
+      embed:
+        description: "Generate dense and sparse embeddings for text"
+        when_to_use: "Internal: called by tool registry search and experience recording"
+        params:
+          texts:
+            type: array
+            required: true
+            description: "List of texts to embed"
+          return_sparse:
+            type: boolean
+            default: true
+            description: "Whether to return sparse lexical embeddings"
+        returns:
+          dense:
+            type: array
+            description: "Dense embeddings (1024 dimensions each)"
+          sparse:
+            type: array
+            description: "Sparse embeddings as token->weight dicts"
+
+      hybrid_score:
+        description: "Compute hybrid similarity scores"
+        when_to_use: "Internal: called during search ranking"
+        params:
+          query_dense:
+            type: array
+            required: true
+            description: "Query dense embedding"
+          query_sparse:
+            type: object
+            required: true
+            description: "Query sparse embedding"
+          corpus_dense:
+            type: array
+            required: true
+            description: "Corpus dense embeddings"
+          corpus_sparse:
+            type: array
+            required: true
+            description: "Corpus sparse embeddings"
+          dense_weight:
+            type: number
+            default: 0.4
+            description: "Weight for dense similarity"
+          sparse_weight:
+            type: number
+            default: 0.6
+            description: "Weight for sparse similarity"
+        returns:
+          scores:
+            type: array
+            description: "Hybrid similarity scores"
+
+      health:
+        description: "Health check for embedding service"
+        when_to_use: "Internal: verify server availability"
+        params: {}
+        returns:
+          status:
+            type: string
+            description: "Server status (ok/error)"
+          model:
+            type: string
+            description: "Model name"
+          dimensions:
+            type: integer
+            description: "Embedding dimensions"
