fix: add missing phases field to embedding tool

--- a/registry.yaml
+++ b/registry.yaml
@@ -8088,6 +8088,8 @@ tools:
       - semantic_search
       - hybrid_scoring
 
+    phases: []  # Internal tool, not used in pentest phases
+
     routing:
       use_for:
         - "generate embeddings"
