feat: split registry.yaml into per-tool tool.yaml files with build-time consolidation
- Extract 37 tools from monolithic registry.yaml into tools/*/tool.yaml
- Add scripts/build-registry.py to consolidate per-tool files back into registry.yaml
- Update CI workflow to trigger on tool.yaml changes and run build script
- Add routing sections with triggers to all 37 tools for RAG discovery

--- a/.github/workflows/registry-publish.yaml
+++ b/.github/workflows/registry-publish.yaml
@@ -4,11 +4,12 @@ on:
   push:
     branches: [main]
     paths:
-      - 'registry.yaml'
+      - 'tools/*/tool.yaml'
+      - 'scripts/build-registry.py'
   workflow_dispatch:
 
 jobs:
-  validate:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +20,10 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install pyyaml jsonschema
+        run: pip install pyyaml
+
+      - name: Build consolidated registry.yaml
+        run: python scripts/build-registry.py
 
       - name: Validate registry schema
         run: |
@@ -102,11 +106,22 @@ jobs:
           EOF
 
   publish:
-    needs: validate
+    needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: pip install pyyaml
+
+      - name: Build consolidated registry.yaml
+        run: python scripts/build-registry.py
 
       - name: Upload to opensploit.ai
         env:
