fix: use bundled Chromium instead of Chrome channel to fix VPN routing

--- a/tools/playwright/Dockerfile
+++ b/tools/playwright/Dockerfile
@@ -1,20 +1,21 @@
 # OpenSploit MCP Server: playwright
 # Browser automation for web application testing, form interaction, and JavaScript-rendered pages
 
-FROM mcr.microsoft.com/playwright:v1.50.0-noble
+FROM node:22-bookworm-slim
 
 LABEL org.opencontainers.image.source="https://github.com/silicon-works/mcp-tools"
 LABEL org.opencontainers.image.description="Playwright MCP server for OpenSploit"
 LABEL org.opencontainers.image.licenses="Apache-2.0"
 
-# Install the Playwright MCP server globally
+# Install the Playwright MCP server and its matching Chromium browser
+# Running install from the MCP package dir ensures Chromium version matches playwright-core
 RUN npm install -g @playwright/mcp@latest
+RUN cd /usr/local/lib/node_modules/@playwright/mcp && npx playwright install --with-deps chromium
 
-# Install Chrome browser (the MCP server defaults to Chrome)
-RUN npx playwright install chrome
+# Configure MCP server to use bundled Chromium (not Chrome channel, which has VPN routing bugs)
+# defaultConfig hardcodes channel:"chrome" — override with "" to use bundled Chromium
+RUN echo '{"browser":{"browserName":"chromium","launchOptions":{"channel":"","headless":true,"chromiumSandbox":false}}}' > /config.json
 
-# MCP servers communicate via stdio - run headless with no sandbox for container use
-# --no-sandbox is required when running as root in Docker
-# Proxy can be configured via PLAYWRIGHT_MCP_PROXY_SERVER env var (e.g., "http://zap:8080")
+# MCP servers communicate via stdio
 # --caps enables additional capabilities: testing (verify_*), tracing, pdf
-CMD ["npx", "@playwright/mcp", "--headless", "--no-sandbox", "--caps=testing,tracing,pdf"]
+CMD ["npx", "@playwright/mcp", "--config", "/config.json", "--caps=testing,tracing,pdf"]
