--- a/tools/playwright/tool.yaml
+++ b/tools/playwright/tool.yaml
@@ -11,6 +11,8 @@ capabilities:
   - screenshot_capture
   - form_interaction
   - spa_testing
+  - captcha_interaction
+  - vision_interaction
 
 phases:
   - reconnaissance
@@ -57,6 +59,16 @@ routing:
     - "payload validation"
     - "verify XSS callback"
     - "check cookie exfiltration"
+    # CAPTCHA interaction
+    - "CAPTCHA"
+    - "captcha solving"
+    - "captcha screenshot"
+    - "image captcha"
+    - "text captcha"
+    - "grid captcha"
+    - "reCAPTCHA"
+    - "slider captcha"
+    - "click captcha images"
   never_use_for:
     - "simple API request"
     - "file download"
@@ -72,6 +84,8 @@ routing:
     - "screenshot"
     - "empty body"
     - "page returns empty"
+    - "captcha"
+    - "CAPTCHA"
   prefer_over:
     - curl  # When page uses JavaScript, returns empty, or has complex forms
 
@@ -114,9 +128,14 @@ methods:
     when_to_use: "Before interacting with elements - returns refs needed for click/type/etc"
     params: {}
   browser_take_screenshot:
-    description: "Capture visual screenshot of the page"
+    description: "Capture visual screenshot of the page or a specific element"
+    when_to_use: "Capture page state, CAPTCHA images, or element-level screenshots for vision analysis"
     params:
       filename: { type: string, description: "Optional filename to save" }
+      element: { type: string, description: "Human description of element to screenshot" }
+      ref: { type: string, description: "Element ref from browser_snapshot for element-level screenshot" }
+      fullPage: { type: boolean, description: "Capture full scrollable page (default: viewport only)" }
+      type: { type: string, description: "Image format: png (default) or jpeg" }
 
   # Element Interaction (use refs from snapshot)
   browser_click:
@@ -231,6 +250,29 @@ methods:
       startRef: { type: string, required: true, description: "Ref of element to drag from" }
       endElement: { type: string, required: true, description: "Human description of target element" }
       endRef: { type: string, required: true, description: "Ref of element to drop onto" }
+
+  # Vision Mode - Coordinate-Based Interaction (requires --caps=vision)
+  browser_mouse_click_xy:
+    description: "Click at exact x,y coordinates on the page (vision mode)"
+    when_to_use: "Click CAPTCHA grid cells, image regions, or elements without accessible refs"
+    params:
+      x: { type: integer, required: true, description: "X coordinate in pixels" }
+      y: { type: integer, required: true, description: "Y coordinate in pixels" }
+      button: { type: string, description: "Mouse button: left (default), right, middle" }
+  browser_mouse_move_xy:
+    description: "Move mouse to exact x,y coordinates (vision mode)"
+    when_to_use: "Hover over CAPTCHA elements, position cursor before clicking"
+    params:
+      x: { type: integer, required: true, description: "X coordinate in pixels" }
+      y: { type: integer, required: true, description: "Y coordinate in pixels" }
+  browser_mouse_drag_xy:
+    description: "Drag from one x,y coordinate to another (vision mode)"
+    when_to_use: "Solve slider CAPTCHAs, drag-and-drop puzzles"
+    params:
+      startX: { type: integer, required: true, description: "Start X coordinate" }
+      startY: { type: integer, required: true, description: "Start Y coordinate" }
+      endX: { type: integer, required: true, description: "End X coordinate" }
+      endY: { type: integer, required: true, description: "End Y coordinate" }
 
   # Browser Installation (utility)
   browser_install:
