feat: add VNC/headed mode for human CAPTCHA solving
Adds Xvfb + x11vnc + noVNC + socat to the Playwright container.
HEADED=1 env var switches to headed mode with VPN proxy support.

--- a/tools/playwright/tool.yaml
+++ b/tools/playwright/tool.yaml
@@ -13,6 +13,8 @@ capabilities:
   - spa_testing
   - captcha_interaction
   - vision_interaction
+  - human_captcha_solving
+  - vnc_display
 
 phases:
   - reconnaissance
@@ -97,6 +99,11 @@ notes: |
   Wraps Microsoft's @playwright/mcp npm package in a locally-built container.
   Use for: login forms, JavaScript-rendered content, web app testing.
   Prefer over curl when pages return empty bodies or require JS rendering.
+
+  VNC/noVNC: The browser runs headed on a virtual display with VNC access.
+  Users can see and interact with the browser at http://localhost:6080/vnc.html
+  This enables human CAPTCHA solving — the agent navigates to the page,
+  then the user connects via VNC to solve the CAPTCHA directly.
 
   WHEN TO USE PLAYWRIGHT vs CURL:
   - Use Playwright: login forms, JS pages, empty curl responses, need to see page
